all new changes

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="mongodb+srv://Test:mongodbpassword@cluster0.bjghlvs.mongodb.net/dine-in"
+DATABASE_URL="mongodb+srv://mahesh1:Testpassword123@cluster0.4ua6vs5.mongodb.net/dine-in"
 SESSION_SECRET="b3gsbj28sbsb@bdbjd*3bsaj1[]12bc"
