--- a/package.json
+++ b/package.json
@@ -28,10 +28,9 @@
 		"@mantine/remix": "^5.8.2",
 		"@mantine/spotlight": "^5.8.3",
 		"@mantine/ssr": "^5.8.3",
-		"@prisma/client": "^4.11.0",
-		"@remix-run/node": "^1.7.6",
-		"@remix-run/react": "^1.7.6",
-		"@remix-run/vercel": "^1.7.6",
+		"@prisma/client": "^5.6.0",
+		"@remix-run/node": "v1.19.1",
+		"@remix-run/react": "v1.19.1",
 		"@types/react-input-mask": "^3.0.2",
 		"bcryptjs": "^2.4.3",
 		"bson": "^4.7.0",
@@ -47,15 +46,15 @@
 		"react-dom": "^18.2.0",
 		"react-input-mask": "^2.0.4",
 		"slugify": "^1.6.5",
-		"sonner": "^0.5.0",
+		"sonner": "^1.2.3",
 		"tiny-invariant": "^1.3.1",
 		"zod": "^3.19.1"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^7.6.0",
-		"@remix-run/dev": "^1.7.6",
-		"@remix-run/eslint-config": "^1.7.6",
-		"@remix-run/serve": "^1.7.6",
+		"@remix-run/dev": "v1.19.1",
+		"@remix-run/eslint-config": "v1.19.1",
+		"@remix-run/serve": "v1.19.1",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.8",
 		"@types/bcryptjs": "^2.4.2",
@@ -65,18 +64,18 @@
 		"@types/react-input-mask": "^3.0.2",
 		"autoprefixer": "^10.4.13",
 		"concurrently": "^7.6.0",
-		"eslint": "^8.28.0",
+		"eslint": "^8.54.0",
 		"postcss": "^8.4.19",
-		"prettier": "^2.8.0",
+		"prettier": "^3.1.0",
 		"prettier-plugin-tailwindcss": "^0.1.13",
-		"prisma": "^4.11.0",
-		"tailwindcss": "^3.2.4",
+		"prisma": "^5.6.0",
+		"tailwindcss": "^3.3.5",
 		"ts-node": "^10.9.1",
-		"tsconfig-paths": "^4.1.0",
-		"typescript": "^4.9.3"
+		"tsconfig-paths": "^4.2.0",
+		"typescript": "^5.3.2"
 	},
 	"engines": {
-		"node": ">=18"
+		"node": ">=14"
 	},
 	"prisma": {
 		"seed": "ts-node --require tsconfig-paths/register prisma/seed.ts"
